--- a/app/javascript/flavours/glitch/styles/snoot/variables.scss
+++ b/app/javascript/flavours/glitch/styles/snoot/variables.scss
@@ -13,10 +13,10 @@ $success-green: lighten(#3c754d, 8%);
 $base-overlay-background: $white !default;
 $valid-value-color: $success-green !default;
 
-$ui-base-color: $classic-secondary-color !default;
+$ui-base-color: $classic-base-color !default;
 $ui-base-lighter-color: #b9e28c; // yellow green crayola
 $ui-primary-color: #e3d3e4; // languid lavender
-$ui-secondary-color: $classic-base-color !default;
+$ui-secondary-color: $classic-secondary-color !default;
 $ui-highlight-color: $classic-highlight-color !default;
 
 $primary-text-color: $black !default;
