--- a/app/javascript/flavours/glitch/styles/snoot/variables.scss
+++ b/app/javascript/flavours/glitch/styles/snoot/variables.scss
@@ -4,7 +4,7 @@ $black: #000000;
 $classic-base-color: #354f52;
 $classic-primary-color: #cad2c5;
 $classic-secondary-color: #84a98c;
-$classic-highlight-color: #52796f;
+$classic-highlight-color: #ef8169;
 
 $ui-base-color: $classic-base-color !default;
 $ui-primary-color: $classic-primary-color !default;
@@ -15,7 +15,7 @@ $darker-text-color: lighten($ui-primary-color, 20%) !default;
 $dark-text-color: lighten($ui-primary-color, 12%) !default;
 $secondary-text-color: lighten($ui-secondary-color, 6%) !default;
 $highlight-text-color: lighten($ui-highlight-color, 10%) !default;
-$action-button-color: lighten($ui-base-color, 50%);
+$action-button-color:  #CD6F5A; //lighten($ui-base-color, 50%);
 
 $inverted-text-color: $black !default;
 $lighter-text-color: darken($ui-base-color,6%) !default;
