Revert "attempt to use floppy disk icon"
This reverts commit 8b02dd6e2778ead01c08e66f4364534343c18574.

--- a/app/javascript/flavours/glitch/styles/components/index.scss
+++ b/app/javascript/flavours/glitch/styles/components/index.scss
@@ -370,13 +370,13 @@
 
 .no-reduce-motion .icon-button.star-icon {
   &.activate {
-    & > .fa-floppy-disk {
+    & > .fa-star {
       animation: spring-rotate-in 1s linear;
     }
   }
 
   &.deactivate {
-    & > .fa-floppy-disk {
+    & > .fa-star {
       animation: spring-rotate-out 1s linear;
     }
   }
