--- a/app/javascript/fonts/sourcesans3.scss
+++ b/app/javascript/fonts/sourcesans3.scss
@@ -2,7 +2,7 @@
   font-family: mastodon-font-sans-serif;
   src:
     local('Source Sans 3 Italic'),
-    url('~fonts/sourcesans3/SourceSans3-Italic.ttf') format('truetype'),
+    url('~fonts/sourcesans3/SourceSans3-Italic.ttf') format('truetype');
   font-weight: normal;
   font-display: swap;
   font-style: italic;
@@ -12,7 +12,7 @@
   font-family: mastodon-font-sans-serif;
   src:
     local('Source Sans 3 Bold'),
-    url('~fonts/sourcesans3/SourceSans3-Bold.ttf') format('truetype'),
+    url('~fonts/sourcesans3/SourceSans3-Bold.ttf') format('truetype');
   font-weight: bold;
   font-display: swap;
   font-style: normal;
@@ -22,7 +22,7 @@
   font-family: mastodon-font-sans-serif;
   src:
     local('Source Sans 3 Medium'),
-    url('~fonts/sourcesans3/SourceSans3-Medium.ttf') format('truetype'),
+    url('~fonts/sourcesans3/SourceSans3-Medium.ttf') format('truetype');
   font-weight: 500;
   font-display: swap;
   font-style: normal;
@@ -32,7 +32,7 @@
   font-family: mastodon-font-sans-serif;
   src:
     local('Source Sans 3 Regular'),
-    url('~fonts/sourcesans3/SourceSans3-Regular.ttf') format('truetype'),
+    url('~fonts/sourcesans3/SourceSans3-Regular.ttf') format('truetype');
   font-weight: normal;
   font-display: swap;
   font-style: normal;
