[Glitch] Add exclusive lists feature
Port exclusive lists feature to glitch

Signed-off-by: Plastikmensch <plastikmensch@users.noreply.github.com>

--- a/app/javascript/flavours/glitch/styles/components/index.scss
+++ b/app/javascript/flavours/glitch/styles/components/index.scss
@@ -1017,6 +1017,15 @@
   border-color: $ui-highlight-color;
 }
 
+label[for="is-exclusive-checkbox"] {
+  margin-left: 20px;
+}
+
+.is-exclusive-checkbox {
+  transform: scale(0.7);
+  transform-origin: bottom;
+}
+
 .getting-started__wrapper,
 .getting_started,
 .flex-spacer {
